commit " отправка заказа в корзину"

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './components/Slider/Slider.scss';
 @import './components/Menu/Menu.scss';
 @import './components/Header/Shopingcart/ShopingCart.scss';
+@import './components/Header/MenuConstructor/MenuConstr.scss';
 
 
 * {
