--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -112,15 +112,6 @@ h4 {
     cursor: pointer;
 }
 
-.popup input[type="text"],
-.popup input[type="tel"],
-.popup select {
-    width: 95%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
 
 .popup button[type="submit"] {
     background: #ee28ac;
@@ -139,4 +130,120 @@ h4 {
 .volume-label {
     font-size: 14px;
     color: #888;
+}
+
+.notification {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.notification.hidden {
+    opacity: 0;
+}
+
+.order-form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 2px solid #007bff;
+    border-radius: 8px;
+    z-index: 1000;
+    max-width: 400px;
+    width: 100%;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+.order-form h4 {
+    margin-top: 0;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group select {
+    width: 94%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.form-group select {
+    cursor: pointer;
+}
+
+button[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+.order-summary {
+    width: 35%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #3822f8;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 3%;
+    text-align: left;
+}
+
+.order-summary h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.order-summary p {
+    font-size: 20px;
+    color: rgb(7, 7, 7);
+    margin: 10px 0;
+}
+
+.order-summary button {
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.order-summary button:hover {
+    background-color: #0056b3;
 }
