--- a/src/components/Header/MenuConstructor/MenuConstr.scss
+++ b/src/components/Header/MenuConstructor/MenuConstr.scss
@@ -2,6 +2,13 @@
     padding-top: 100px;
 }
 
+h6 {
+    text-align: center;
+    font-size: 25px;
+    margin-top: 10px;
+    color: #007bff;
+}
+
 .MenuConstr {
     background: rgb(121, 44, 80);
     min-height: 1500px;
@@ -50,14 +57,14 @@
 
 .close-button {
     position: absolute;
-    top: 45%;;
+    top: 45%;
     right: 15px;
     background-color: transparent;
     border: none;
     cursor: pointer;
     color: #fff;
     font-size: 16px;
-    padding: 5px 10px;
+    padding: 2px 5px;
     cursor: pointer;
 
 }
@@ -103,7 +110,7 @@
 }
 
 .selected-product {
-    width: 20%;
+    width: 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -129,3 +136,10 @@
     margin: 0 auto;
     margin-top: 15px;
   }
+
+.delete-icon {
+    font-size: 13px;
+    color: red;
+    // border: 1px solid #0e0d0d;
+    cursor: pointer;
+}
